syntax = "proto3";

package commonfate.access.v1alpha1;

import "commonfate/entity/v1alpha1/uid.proto";
import "commonfate/access/v1alpha1/named_uid.proto";


service EntityService {
    rpc QueryDescendents(QueryDescendentsRequest) returns (QueryDescendentsResponse) {}
}

message QueryDescendentsRequest {
    commonfate.entity.v1alpha1.UID parent = 1;
    string entity_type = 2;
    // The token for the next page.
    string page_token = 10;
}

message QueryDescendentsResponse {
    repeated NamedUID entities = 1;
    // The token for the next page.
    string next_page_token = 2;
}
